kubernetes/ingress.yaml
---
# Source: erpnext/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 	frappe-bench-erpnext
  labels:
    helm.sh/chart: erpnext-7.0.107
    app.kubernetes.io/name: 	frappe-bench-erpnext
    app.kubernetes.io/instance: 	frappe-bench-erpnext
    app.kubernetes.io/version: "v15.33.5"
    app.kubernetes.io/managed-by: Helm
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: finkash
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - "skm.finkash.co.za"
      secretName: skm-server-tls
  rules:
    - host: "skm.finkash.co.za"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: frappe-bench-erpnext
                port:
                  number: 8080
